--- a/matchingProject_notice/src/main/resources/application.yml
+++ b/matchingProject_notice/src/main/resources/application.yml
@@ -1,6 +1,8 @@
+server:
+  port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/noticePost
+    url: jdbc:mysql://localhost:3306/noticepost
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -8,3 +10,4 @@ spring:
     hibernate:
      ddl-auto: update
     show-sql: true
+
